Checkstyle and Findbugs changes
Also changed comment callouts from // (1) to // [1]