@@ -9,7 +9,7 @@ public class ImmutableInteger {
   public static void main(String[] args) {
     List<Integer> v = new ArrayList<>();
     for(int i = 0; i < 10; i++)
-      v.add(new Integer(i));
+      v.add(Integer.valueOf(i));
     // But how do you change the int
     // inside the Integer?
   }
